Add validation, MediatR, and API enhancements
- Integrated FluentValidation and MediatR for request handling.
- Added `ValidationBehavior` for automatic request validation.
- Introduced `ApiResponse` class for standardized API responses.
- Enhanced exception handling with `BusinessValidationException`.
- Refactored `CreateProductCommand` and added validation rules.
- Added `CreateCategoryCommand` with handler, response, and validator.
- Updated `CatalogDbContext` with soft-delete filtering and event publishing.
- Introduced `ICategoryRepository` and `CategoryRepository`.
- Added `ProductMappingProfile` for entity-to-DTO mapping.
- Updated project dependencies and removed unused mapping profiles.

--- a/src/BuildingBlocks/BuildingBlocks.CrossCutting/BuildingBlocks.CrossCutting.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.CrossCutting/BuildingBlocks.CrossCutting.csproj
@@ -8,11 +8,14 @@
 
   <ItemGroup>
     <Folder Include="Middlewares\" />
-    <Folder Include="Validation\" />
 	
   </ItemGroup>
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FluentValidation" Version="11.11.0" />
+		<PackageReference Include="MediatR" Version="13.1.0" />
 	</ItemGroup>
 
 </Project>
