--- a/src/BuildingBlocks/BuildingBlocks.Security/BuildingBlocks.Security.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.Security/BuildingBlocks.Security.csproj
@@ -8,7 +8,11 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
-    <Folder Include="Encryption\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 
 </Project>
