Enhance logging, security, and Docker support
- Added PostgreSQL databases and SEQ logging service in `docker-compose.yml`.
- Integrated Serilog for structured logging across services.
- Replaced HMACSHA512 with BCrypt for password hashing.
- Updated Dockerfiles to use Linux-based .NET runtime and SDK images.
- Refactored `User` entity for BCrypt and backward compatibility.
- Implemented repository methods for claims, tokens, and user management.
- Introduced exception middleware for structured error handling.
- Configured Serilog sinks (console, file, SEQ) in `appsettings.json`.

--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,8 +1,63 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    // Hangi sink'leri (çıktı yerlerini) kullanacağını belirt
+    "Using": [
+      "Serilog.Sinks.Console", // Console'a yazdırır
+      "Serilog.Sinks.File", // Dosyaya yazdırır
+      "Serilog.Sinks.Seq" // SEQ'e (log görüntüleme aracı) gönderir
+    ],
+
+    // Log seviyeleri: Trace < Debug < Information < Warning < Error < Fatal
+    "MinimumLevel": {
+      "Default": "Information", // Normal durumlarda Information ve üstü
+      "Override": {
+        "Microsoft": "Warning", // Microsoft logları sadece Warning'den itibaren
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning"
+      }
+    },
+
+    // Nereye yazacağız? (3 yer: Console, File, SEQ)
+    "WriteTo": [
+
+      // 1. CONSOLE'A YAZ
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+
+      // 2. DOSYAYA YAZ
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/catalog-api-.txt", // Dosya yolu
+          "rollingInterval": "Day", // Her gün yeni dosya oluştur
+          "retainedFileCountLimit": 7, // Son 7 günü tut, eskilerini sil
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+
+      // 3. SEQ'E GÖNDER (Opsiyonel - görsel log arayüzü)
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341" // SEQ sunucu adresi
+        }
+      }
+    ],
+
+    // Loglara otomatik eklenecek bilgiler
+    "Enrich": [
+      "FromLogContext", // Koddan eklediğin bilgileri dahil et
+      "WithMachineName", // Hangi sunucuda çalışıyor
+      "WithThreadId" // Hangi thread'de çalışıyor
+    ],
+
+    // Her log'da otomatik olarak olsun
+    "Properties": {
+      "Application": "MicroECommerce.Catalog"
     }
   },
   "AllowedHosts": "*",
