--- a/src/BuildingBlocks/BuildingBlocks.CrossCutting/BuildingBlocks.CrossCutting.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.CrossCutting/BuildingBlocks.CrossCutting.csproj
@@ -16,6 +16,7 @@
 	<ItemGroup>
 		<PackageReference Include="FluentValidation" Version="11.11.0" />
 		<PackageReference Include="MediatR" Version="13.1.0" />
+		<PackageReference Include="Serilog" Version="4.3.0" />
 	</ItemGroup>
 
 </Project>
