--- a/src/BuildingBlocks/BuildingBlocks.Logging/BuildingBlocks.Logging.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.Logging/BuildingBlocks.Logging.csproj
@@ -5,9 +5,22 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Configurations\" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Serilog" Version="4.2.1" />
+		<PackageReference Include="Serilog.AspNetCore" Version="8.0.4" />
+
+		<PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+		<PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
+
+		<PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
+		<PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+		<PackageReference Include="Serilog.Sinks.Seq" Version="8.1.0" />
+	</ItemGroup>
+
 
 </Project>
