--- a/src/Services/Identity/Identity.Application/Identity.Application.csproj
+++ b/src/Services/Identity/Identity.Application/Identity.Application.csproj
@@ -19,4 +19,7 @@
 		<PackageReference Include="MediatR" Version="13.1.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Features\Auth\EventHandlers\" />
+	</ItemGroup>
 </Project>
