Add messaging, JWT, and email services
- Added `BuildingBlocks.Messaging` project for email handling.
- Enhanced `IAsyncRepository` and `EfRepositoryBase` for query customization.
- Introduced JWT authentication and authorization policies.
- Added `CategoryBusinessRules` and `ProductBusinessRules` for domain validation.
- Integrated `SmtpEmailService` and email templates for notifications.
- Refactored `appsettings.json` for better configuration management.
- Enhanced `CreateCategoryCommandHandler` with logging and validation.
- Updated `Identity.API` with JWT and email services.
- Improved logging with `Serilog` and added custom exception handling.
- Scoped business rules and security services for dependency injection.

--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,68 +1,76 @@
 {
   "Serilog": {
-    // Hangi sink'leri (çıktı yerlerini) kullanacağını belirt
     "Using": [
-      "Serilog.Sinks.Console", // Console'a yazdırır
-      "Serilog.Sinks.File", // Dosyaya yazdırır
-      "Serilog.Sinks.Seq" // SEQ'e (log görüntüleme aracı) gönderir
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Seq"
     ],
-
-    // Log seviyeleri: Trace < Debug < Information < Warning < Error < Fatal
     "MinimumLevel": {
-      "Default": "Information", // Normal durumlarda Information ve üstü
+      "Default": "Information",
       "Override": {
-        "Microsoft": "Warning", // Microsoft logları sadece Warning'den itibaren
+        "Microsoft": "Warning",
         "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning",
         "System": "Warning"
       }
     },
-
-    // Nereye yazacağız? (3 yer: Console, File, SEQ)
     "WriteTo": [
-
-      // 1. CONSOLE'A YAZ
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
         }
       },
-
-      // 2. DOSYAYA YAZ
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/catalog-api-.txt", // Dosya yolu
-          "rollingInterval": "Day", // Her gün yeni dosya oluştur
-          "retainedFileCountLimit": 7, // Son 7 günü tut, eskilerini sil
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+          "path": "Logs/identity-api-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7
         }
       },
-
-      // 3. SEQ'E GÖNDER (Opsiyonel - görsel log arayüzü)
       {
         "Name": "Seq",
         "Args": {
-          "serverUrl": "http://localhost:5341" // SEQ sunucu adresi
+          "serverUrl": "http://localhost:5341"
         }
       }
-    ],
-
-    // Loglara otomatik eklenecek bilgiler
-    "Enrich": [
-      "FromLogContext", // Koddan eklediğin bilgileri dahil et
-      "WithMachineName", // Hangi sunucuda çalışıyor
-      "WithThreadId" // Hangi thread'de çalışıyor
-    ],
-
-    // Her log'da otomatik olarak olsun
-    "Properties": {
-      "Application": "MicroECommerce.Catalog"
-    }
+    ]
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "CatalogConnectionString": "Host=localhost;Port=5432;Database=MicroECommerce_CatalogDb;Username=postgres;Password=admin123;"
 
+  "ConnectionStrings": {
+    "IdentityConnectionString": "Host=localhost;Port=5433;Database=MicroECommerce_IdentityDb;Username=postgres;Password=admin123;"
+  },
+
+  "TokenOptions": {
+    "Audience": "microecommerce.com",
+    "Issuer": "microecommerce.com",
+    "AccessTokenExpiration": 15,
+    "RefreshTokenExpiration": 10080,
+    "SecurityKey": "your-super-secret-key-minimum-32-characters-long-please-change-this"
+  },
+
+  "EmailOptions": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "noreply@microecommerce.com",
+    "SenderName": "MicroECommerce",
+    "Username": "your-email@gmail.com",
+    "Password": "your-app-password",
+    "EnableSsl": true,
+    "TemplateFolder": "EmailTemplates",
+    "SendEmailInDevelopment": false
+  },
+
+  "AllowedHosts": "*",
+
+  "_comments": {
+    "EmailOptions": {
+      "Gmail": "Gmail için 2FA aktif olmalı ve 'App Password' kullanmalısınız",
+      "Username": "Gmail adresiniz (örn: yourname@gmail.com)",
+      "Password": "Gmail App Password (16 karakterlik kod)",
+      "TemplateFolder": "Email template'lerinin bulunduğu klasör (Identity.API/EmailTemplates/)",
+      "SendEmailInDevelopment": "false ise Development'ta email gönderilmez, sadece console'a log yazılır"
+    }
   }
 }
