--- a/src/BuildingBlocks/BuildingBlocks.CrossCutting/BuildingBlocks.CrossCutting.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.CrossCutting/BuildingBlocks.CrossCutting.csproj
@@ -18,5 +18,8 @@
 		<PackageReference Include="MediatR" Version="13.1.0" />
 		<PackageReference Include="Serilog" Version="4.3.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
+	</ItemGroup>
 
 </Project>
