Add CRUD support for Category and Product entities
Implemented full Create, Update, and Delete command/handler patterns for both Category and Product entities. Updated controllers to expose PUT and DELETE endpoints with standardized ApiResponse results. Added mapping profiles and validators for new commands. Cleaned up appsettings.json, removed unused Swagger extension, and registered UserBusinessRules. This enables complete management of categories and products in the Catalog API.

--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -24,7 +24,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/identity-api-.txt",
+          "path": "Logs/catalog-api-.txt",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 7
         }
@@ -37,11 +37,9 @@
       }
     ]
   },
-
   "ConnectionStrings": {
-    "IdentityConnectionString": "Host=localhost;Port=5433;Database=MicroECommerce_IdentityDb;Username=postgres;Password=admin123;"
+    "CatalogConnectionString": "Host=localhost;Port=5432;Database=MicroECommerce_CatalogDb;Username=postgres;Password=admin123;"
   },
-
   "TokenOptions": {
     "Audience": "microecommerce.com",
     "Issuer": "microecommerce.com",
@@ -49,28 +47,5 @@
     "RefreshTokenExpiration": 10080,
     "SecurityKey": "your-super-secret-key-minimum-32-characters-long-please-change-this"
   },
-
-  "EmailOptions": {
-    "SmtpServer": "smtp.gmail.com",
-    "SmtpPort": 587,
-    "SenderEmail": "noreply@microecommerce.com",
-    "SenderName": "MicroECommerce",
-    "Username": "your-email@gmail.com",
-    "Password": "your-app-password",
-    "EnableSsl": true,
-    "TemplateFolder": "EmailTemplates",
-    "SendEmailInDevelopment": false
-  },
-
-  "AllowedHosts": "*",
-
-  "_comments": {
-    "EmailOptions": {
-      "Gmail": "Gmail için 2FA aktif olmalı ve 'App Password' kullanmalısınız",
-      "Username": "Gmail adresiniz (örn: yourname@gmail.com)",
-      "Password": "Gmail App Password (16 karakterlik kod)",
-      "TemplateFolder": "Email template'lerinin bulunduğu klasör (Identity.API/EmailTemplates/)",
-      "SendEmailInDevelopment": "false ise Development'ta email gönderilmez, sadece console'a log yazılır"
-    }
-  }
+  "AllowedHosts": "*"
 }
