Add transactional email support for user registration
- Added EmailOptions config for SMTP and templates in appsettings.json
- Introduced UserCreatedEmailHandler to send confirmation/welcome emails
- Added HTML templates for email confirmation and welcome messages
- Updated UserRepository (minor refactor, Serilog import)
- Changed Seq logging URL for local development

--- a/src/Services/Identity/Identity.API/appsettings.json
+++ b/src/Services/Identity/Identity.API/appsettings.json
@@ -34,7 +34,7 @@
       {
         "Name": "Seq",
         "Args": {
-          "serverUrl": "http://seq:80"
+          "serverUrl": "http://localhost:5341"
         }
       }
     ],
@@ -57,6 +57,17 @@
     "AccessTokenExpiration": 15,
     "RefreshTokenExpiration": 10080,
     "SecurityKey": "your-super-secret-key-minimum-32-characters-long-please-change-this"
+  },
+  "EmailOptions": {
+    "SmtpServer": "sandbox.smtp.mailtrap.io",
+    "SmtpPort": 2525,
+    "SenderEmail": "noreply@microecommerce.com",
+    "SenderName": "MicroECommerce Team",
+    "Username": "92c879dbe7f8a1",
+    "Password": "d4f889fe5fed9e",
+    "EnableSsl": false,
+    "TemplateFolder": "EmailTemplates",
+    "SendEmailInDevelopment": true
   },
   "AllowedHosts": "*"
 }
