--- a/src/BuildingBlocks/BuildingBlocks.Messaging/BuildingBlocks.Messaging.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.Messaging/BuildingBlocks.Messaging.csproj
@@ -8,15 +8,24 @@
 
   <ItemGroup>
     <Folder Include="SMS\" />
-    <Folder Include="Templates\EmailTemplates\" />
   </ItemGroup>
-
+	<ItemGroup>
+		<Content Include="Templates\EmailTemplates\*.html">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="MailKit" Version="4.9.0" />
 		<PackageReference Include="MimeKit" Version="4.9.0" />
 		<PackageReference Include="RazorLight" Version="2.3.1" />		
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Templates\EmailTemplates\Welcome.html">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 </Project>
