--- a/src/Services/Identity/Identity.API/appsettings.json
+++ b/src/Services/Identity/Identity.API/appsettings.json
@@ -66,7 +66,7 @@
     "Username": "92c879dbe7f8a1",
     "Password": "d4f889fe5fed9e",
     "EnableSsl": false,
-    "TemplateFolder": "EmailTemplates",
+    "TemplateFolder": "Templates/EmailTemplates",
     "SendEmailInDevelopment": true
   },
   "AllowedHosts": "*"
