--- a/src/BuildingBlocks/BuildingBlocks.Messaging/BuildingBlocks.Messaging.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.Messaging/BuildingBlocks.Messaging.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="SMS\" />
+	  <Folder Include="Templates\EmailTemplates\" />
   </ItemGroup>
 	<ItemGroup>
 		<Content Include="Templates\EmailTemplates\*.html">
