Refactor env config, Docker, logging, and migrations
- Add .env for centralized environment/config management
- Refactor docker-compose to use env vars for all services
- Remove health checks from Docker for simplicity
- Update Dockerfile paths and service dependencies
- Improve Serilog config for dynamic Seq logging
- Automate DB migrations on startup for Catalog/Identity APIs
- Add PostgreSQL health checks to APIs
- Clean up appsettings.json, remove sensitive info
- Replace EF Core migrations to fix decimal column issues
- Remove unused/obsolete package references

--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,51 +1,34 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CatalogConnectionString": "Host=localhost;Port=5432;Database=MicroECommerce_CatalogDb;Username=postgres;Password=YOUR_PASSWORD_HERE;"
+  },
   "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.File",
-      "Serilog.Sinks.Seq"
-    ],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
-        "Microsoft.AspNetCore": "Warning",
-        "Microsoft.EntityFrameworkCore": "Warning",
         "System": "Warning"
       }
     },
     "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/catalog-api-.txt",
-          "rollingInterval": "Day",
-          "retainedFileCountLimit": 7
-        }
-      },
+      { "Name": "Console" },
       {
         "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://localhost:5341"
-        }
+        "Args": { "serverUrl": "http://localhost:5341" }
       }
-    ]
-  },
-  "ConnectionStrings": {
-    "CatalogConnectionString": "Host=localhost;Port=5432;Database=MicroECommerce_CatalogDb;Username=postgres;Password=admin123;"
-  },
-  "TokenOptions": {
-    "Audience": "microecommerce.com",
-    "Issuer": "microecommerce.com",
-    "AccessTokenExpiration": 15,
-    "RefreshTokenExpiration": 10080,
-    "SecurityKey": "your-super-secret-key-minimum-32-characters-long-please-change-this"
-  },
-  "AllowedHosts": "*"
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "Application": "MicroECommerce.Catalog",
+      "Environment": "Development"
+    }
+  }
 }
