--- a/src/Services/Identity/Identity.API/appsettings.json
+++ b/src/Services/Identity/Identity.API/appsettings.json
@@ -1,73 +1,53 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IdentityConnectionString": "Host=localhost;Port=5432;Database=MicroECommerce_IdentityDb;Username=postgres;Password=YOUR_PASSWORD_HERE;"
+  },
   "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.File",
-      "Serilog.Sinks.Seq"
-    ],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
-        "Microsoft.AspNetCore": "Warning",
-        "Microsoft.EntityFrameworkCore": "Warning",
-        "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
         "System": "Warning"
       }
     },
     "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/identity-api-.txt",
-          "rollingInterval": "Day",
-          "retainedFileCountLimit": 7,
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{SourceContext}] {Message:lj} {Properties:j}{NewLine}{Exception}"
-        }
-      },
+      { "Name": "Console" },
       {
         "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://localhost:5341"
-        }
+        "Args": { "serverUrl": "http://localhost:5341" }
       }
     ],
-    "Enrich": [
-      "FromLogContext",
-      "WithMachineName",
-      "WithThreadId"
-    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
     "Properties": {
       "Application": "MicroECommerce.Identity",
       "Environment": "Development"
     }
-  },
-  "ConnectionStrings": {
-    "IdentityConnectionString": "Host=localhost;Port=5432;Database=MicroECommerce_IdentityDb;Username=postgres;Password=admin123;"
   },
   "TokenOptions": {
     "Audience": "microecommerce.com",
     "Issuer": "microecommerce.com",
     "AccessTokenExpiration": 15,
     "RefreshTokenExpiration": 10080,
-    "SecurityKey": "your-super-secret-key-minimum-32-characters-long-please-change-this"
+    "SecurityKey": "REPLACE_WITH_USER_SECRET_OR_ENV_VAR_MIN_32_CHARS"
   },
   "EmailOptions": {
-    "SmtpServer": "sandbox.smtp.mailtrap.io",
-    "SmtpPort": 2525,
-    "SenderEmail": "noreply@microecommerce.com",
+    "SmtpServer": "smtp.example.com",
+    "SmtpPort": 587,
+    "SenderEmail": "noreply@example.com",
     "SenderName": "MicroECommerce Team",
-    "Username": "92c879dbe7f8a1",
-    "Password": "d4f889fe5fed9e",
+    // Mail bilgileri gizlendi:
+    "Username": "YOUR_SMTP_USERNAME",
+    "Password": "YOUR_SMTP_PASSWORD",
     "EnableSsl": false,
     "TemplateFolder": "Templates/EmailTemplates",
     "SendEmailInDevelopment": true
-  },
-  "AllowedHosts": "*"
+  }
 }
