--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,167 +1,140 @@
-version: '3.8'
-
 services:
-  # ============================================
-  # DATABASES
-  # ============================================
-  
+
+  # --- VERİTABANLARI ---
   catalog-db:
     image: postgres:16-alpine
     container_name: catalog-db
     environment:
-      POSTGRES_DB: MicroECommerce_CatalogDb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin123
+      POSTGRES_DB: ${CATALOG_DB_NAME}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - catalog-db-data:/var/lib/postgresql/data
     networks:
       - microecommerce-network
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   identity-db:
     image: postgres:16-alpine
     container_name: identity-db
     environment:
-      POSTGRES_DB: MicroECommerce_IdentityDb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: admin123
+      POSTGRES_DB: ${IDENTITY_DB_NAME}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "5433:5432"
+      - "5433:${POSTGRES_PORT}" 
     volumes:
       - identity-db-data:/var/lib/postgresql/data
     networks:
       - microecommerce-network
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
-  # ============================================
-  # LOGGING & MONITORING
-  # ============================================
-  
+  # --- MESSAGE BROKER ---
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
+    ports:
+      - "5672:5672"
+      - "${RABBITMQ_UI_PORT}:15672"
+    networks:
+      - microecommerce-network
+    restart: unless-stopped
+
+  # --- LOGGING ---
   seq:
     image: datalust/seq:latest
     container_name: seq
     environment:
       ACCEPT_EULA: Y
+      SEQ_FIRSTRUN_ADMINPASSWORD: ${RABBITMQ_PASSWORD}
     ports:
-      - "5341:80"
+      - "${SEQ_PORT}:80"
     volumes:
       - seq-data:/data
     networks:
       - microecommerce-network
     restart: unless-stopped
 
-  # ============================================
-  # MESSAGE BROKER
-  # ============================================
-  
-  rabbitmq:
-    image: rabbitmq:3-management-alpine
-    container_name: rabbitmq
-    environment:
-      RABBITMQ_DEFAULT_USER: admin
-      RABBITMQ_DEFAULT_PASS: admin123
-    ports:
-      - "5672:5672"   # AMQP port
-      - "15672:15672" # Management UI
-    volumes:
-      - rabbitmq-data:/var/lib/rabbitmq
-    networks:
-      - microecommerce-network
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "rabbitmq-diagnostics", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-
-  # ============================================
-  # MICROSERVICES
-  # ============================================
-  
-  api-gateway:
+  # --- API SERVİSLERİ ---
+  catalog-api:
+    image: ${DOCKER_REGISTRY-}catalog-api
+    container_name: catalog-api
     build:
       context: .
-      dockerfile: src/ApiGateway/Dockerfile
-    container_name: api-gateway
+      dockerfile: src/Services/Catalog/Catalog.API/Dockerfile
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
-      - ReverseProxy__Clusters__identity-cluster__Destinations__identity-destination-1__Address=http://identity-api:80
-      - ReverseProxy__Clusters__catalog-cluster__Destinations__catalog-destination-1__Address=http://catalog-api:80
-      - Serilog__WriteTo__1__Args__serverUrl=http://seq:80
-      - TokenOptions__Audience=microecommerce.com
-      - TokenOptions__Issuer=microecommerce.com
-      - TokenOptions__SecurityKey=your-super-secret-key-minimum-32-characters-long-please-change-this
+      - ConnectionStrings__CatalogConnectionString=Host=catalog-db;Port=${POSTGRES_PORT};Database=${CATALOG_DB_NAME};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};
+      - Serilog__WriteTo__1__Args__serverUrl=${SEQ_URL}
     ports:
-      - "5000:80"
+      - "${CATALOG_API_PORT}:80"
+    depends_on:
+      - catalog-db
+      - rabbitmq
+      - seq
+    networks:
+      - microecommerce-network
+
+  identity-api:
+    image: ${DOCKER_REGISTRY-}identity-api
+    container_name: identity-api
+    build:
+      context: .
+      dockerfile: src/Services/Identity/Identity.API/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+      - ASPNETCORE_URLS=http://+:80
+      
+      - ConnectionStrings__IdentityConnectionString=Host=identity-db;Port=${POSTGRES_PORT};Database=${IDENTITY_DB_NAME};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};
+      
+      - Serilog__WriteTo__2__Args__serverUrl=${SEQ_URL}
+      
+      - TokenOptions__SecurityKey=${JWT_SECRET}
+      - TokenOptions__Issuer=${JWT_ISSUER}
+      - TokenOptions__Audience=${JWT_AUDIENCE}
+      - TokenOptions__AccessTokenExpiration=${JWT_ACCESS_EXP_MINUTES}
+      - TokenOptions__RefreshTokenExpiration=${JWT_REFRESH_EXP_MINUTES}
+      
+      - EmailOptions__SmtpServer=${SMTP_HOST}
+      - EmailOptions__SmtpPort=${SMTP_PORT}
+      - EmailOptions__Username=${SMTP_USER}
+      - EmailOptions__Password=${SMTP_PASS}
+      - EmailOptions__SenderEmail=${SENDER_EMAIL}
+
+    ports:
+      - "${IDENTITY_API_PORT}:80"
+    depends_on:
+      - identity-db
+      - rabbitmq
+      - seq
+    networks:
+      - microecommerce-network
+
+  # --- API GATEWAY ---
+  api-gateway:
+    image: ${DOCKER_REGISTRY-}api-gateway
+    container_name: api-gateway
+    build:
+      context: .
+      dockerfile: src/ApiGateway/ApiGateway/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+      - ASPNETCORE_URLS=http://+:80
+      - Serilog__WriteTo__1__Args__serverUrl=${SEQ_URL}
+    ports:
+      - "${API_GATEWAY_PORT}:80"
     depends_on:
       - catalog-api
       - identity-api
       - seq
     networks:
       - microecommerce-network
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  catalog-api:
-    build:
-      context: .
-      dockerfile: src/Services/Catalog/Catalog.API/Dockerfile
-    container_name: catalog-api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - ConnectionStrings__CatalogConnectionString=Host=catalog-db;Port=5432;Database=MicroECommerce_CatalogDb;Username=postgres;Password=admin123;
-      - Serilog__WriteTo__1__Args__serverUrl=http://seq:80
-    ports:
-      - "5152:80"
-    depends_on:
-      catalog-db:
-        condition: service_healthy
-      seq:
-        condition: service_started
-    networks:
-      - microecommerce-network
-    restart: unless-stopped
-
-  identity-api:
-    build:
-      context: .
-      dockerfile: src/Services/Identity/Identity.API/Dockerfile
-    container_name: identity-api
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - ConnectionStrings__IdentityConnectionString=Host=identity-db;Port=5432;Database=MicroECommerce_IdentityDb;Username=postgres;Password=admin123;
-      - Serilog__WriteTo__1__Args__serverUrl=http://seq:80
-    ports:
-      - "5201:80"
-    depends_on:
-      identity-db:
-        condition: service_healthy
-      seq:
-        condition: service_started
-      rabbitmq:
-        condition: service_healthy
-    networks:
-      - microecommerce-network
-    restart: unless-stopped
 
 networks:
   microecommerce-network:
@@ -171,4 +144,3 @@ volumes:
   catalog-db-data:
   identity-db-data:
   seq-data:
-  rabbitmq-data:
