--- a/src/ApiGateway/ApiGateway/ApiGateway.csproj
+++ b/src/ApiGateway/ApiGateway/ApiGateway.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -17,9 +17,7 @@
 	<ItemGroup>
 		<PackageReference Include="Yarp.ReverseProxy" Version="2.2.0" />
 
-		<PackageReference Include="Microsoft.AspNetCore.RateLimiting" Version="10.0.0" />
-
-		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.1" />
+		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
 
 		<PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
