--- a/src/BuildingBlocks/BuildingBlocks.Messaging/BuildingBlocks.Messaging.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.Messaging/BuildingBlocks.Messaging.csproj
@@ -17,6 +17,8 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="MailKit" Version="4.9.0" />
+		<PackageReference Include="MassTransit" Version="8.5.7" />
+		<PackageReference Include="MassTransit.RabbitMQ" Version="8.5.7" />
 		<PackageReference Include="MimeKit" Version="4.9.0" />
 		<PackageReference Include="RazorLight" Version="2.3.1" />		
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.0" />
