--- a/src/ApiGateway/ApiGateway/appsettings.json
+++ b/src/ApiGateway/ApiGateway/appsettings.json
@@ -92,7 +92,7 @@
       "identity-cluster": {
         "Destinations": {
           "identity-destination-1": {
-            "Address": "http://localhost:5201"
+            "Address": "http://identity-api:80"
           }
         },
         "HealthCheck": {
@@ -109,7 +109,7 @@
       "catalog-cluster": {
         "Destinations": {
           "catalog-destination-1": {
-            "Address": "http://localhost:5152"
+            "Address": "http://catalog-api:80"
           }
         },
         "HealthCheck": {
