Add Notification microservice & category tree support
- Introduce Notification.API, Application, Domain, Infrastructure projects with EF Core, Serilog, health checks, and Docker support
- Add NotificationLog entity, repository, and event consumer for user creation emails
- Update solution and Docker Compose for notification service and database
- Enhance Catalog: hierarchical categories, IsActive flag, tree API endpoint, improved migration logging, and refactored queries
- Add configuration files for Notification service (appsettings, launchSettings)
- Refactor namespaces and improve code organization for maintainability

--- a/src/Services/Catalog/Catalog.API/Catalog.API.csproj
+++ b/src/Services/Catalog/Catalog.API/Catalog.API.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>d3e1a774-1a76-4125-8370-636f08a6838b</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+	  <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..\..</DockerfileContext>
   </PropertyGroup>
 
