--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - catalog-db-data:/var/lib/postgresql/data
     networks:
@@ -24,9 +24,24 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "5433:${POSTGRES_PORT}" 
+      - "5433:5432"
     volumes:
       - identity-db-data:/var/lib/postgresql/data
+    networks:
+      - microecommerce-network
+    restart: unless-stopped
+
+  notification-db:
+    image: postgres:16-alpine
+    container_name: notification-db
+    environment:
+      POSTGRES_DB: ${NOTIFICATION_DB_NAME}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5434:5432"
+    volumes:
+      - notification-db-data:/var/lib/postgresql/data
     networks:
       - microecommerce-network
     restart: unless-stopped
@@ -93,9 +108,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
-      
       - ConnectionStrings__IdentityConnectionString=Host=identity-db;Port=5432;Database=MicroECommerce_IdentityDb;Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};
-      
       - Serilog__WriteTo__2__Args__serverUrl=${SEQ_URL}
       - RabbitMQ__Host=rabbitmq
       - RabbitMQ__UserName=${RABBITMQ_USER}
@@ -105,17 +118,43 @@ services:
       - TokenOptions__Audience=${JWT_AUDIENCE}
       - TokenOptions__AccessTokenExpiration=${JWT_ACCESS_EXP_MINUTES}
       - TokenOptions__RefreshTokenExpiration=${JWT_REFRESH_EXP_MINUTES}
-      
       - EmailOptions__SmtpServer=${SMTP_HOST}
       - EmailOptions__SmtpPort=${SMTP_PORT}
       - EmailOptions__Username=${SMTP_USER}
       - EmailOptions__Password=${SMTP_PASS}
       - EmailOptions__SenderEmail=${SENDER_EMAIL}
-
     ports:
       - "${IDENTITY_API_PORT}:80"
     depends_on:
       - identity-db
+      - rabbitmq
+      - seq
+    networks:
+      - microecommerce-network
+
+  notification-api:
+    image: ${DOCKER_REGISTRY-}notification-api
+    container_name: notification-api
+    build:
+      context: .
+      dockerfile: src/Services/Notification/Notification.API/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+      - ASPNETCORE_URLS=http://+:80
+      - ConnectionStrings__NotificationConnectionString=Host=notification-db;Port=5432;Database=MicroECommerce_NotificationDb;Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};
+      - Serilog__WriteTo__1__Args__serverUrl=${SEQ_URL}
+      - RabbitMQ__Host=rabbitmq
+      - RabbitMQ__UserName=${RABBITMQ_USER}
+      - RabbitMQ__Password=${RABBITMQ_PASSWORD}
+      - EmailOptions__SmtpServer=${SMTP_HOST}
+      - EmailOptions__SmtpPort=${SMTP_PORT}
+      - EmailOptions__Username=${SMTP_USER}
+      - EmailOptions__Password=${SMTP_PASS}
+      - EmailOptions__SenderEmail=${SENDER_EMAIL}
+    ports:
+      - "${NOTIFICATION_API_PORT}:80"
+    depends_on:
+      - notification-db
       - rabbitmq
       - seq
     networks:
@@ -148,4 +187,5 @@ networks:
 volumes:
   catalog-db-data:
   identity-db-data:
+  notification-db-data:
   seq-data:
