--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,20 @@ services:
       - microecommerce-network
     restart: unless-stopped
 
+  inventory-db:
+    image: postgres:16-alpine
+    container_name: inventory-db
+    environment:
+      POSTGRES_DB: MicroECommerce_InventoryDb
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5435:5432"
+    volumes:
+      - inventory-db-data:/var/lib/postgresql/data
+    networks:
+      - microecommerce-network
+    restart: unless-stopped
   notification-db:
     image: postgres:16-alpine
     container_name: notification-db
@@ -160,6 +174,28 @@ services:
     networks:
       - microecommerce-network
 
+  inventory-api:
+    image: ${DOCKER_REGISTRY-}inventory-api
+    container_name: inventory-api
+    build:
+      context: .
+      dockerfile: src/Services/Inventory/Inventory.API/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+      - ASPNETCORE_URLS=http://+:80
+      - ConnectionStrings__InventoryConnectionString=Host=inventory-db;Port=5432;Database=MicroECommerce_InventoryDb;Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};
+      - Serilog__WriteTo__1__Args__serverUrl=${SEQ_URL}
+      - RabbitMQ__Host=rabbitmq
+      - RabbitMQ__UserName=${RABBITMQ_USER}
+      - RabbitMQ__Password=${RABBITMQ_PASSWORD}
+    ports:
+      - "${INVENTORY_API_PORT}:80" 
+    depends_on:
+      - inventory-db
+      - rabbitmq
+      - seq
+    networks:
+      - microecommerce-network
   # --- API GATEWAY ---
   api-gateway:
     image: ${DOCKER_REGISTRY-}api-gateway
