--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "CacheSettings": {
-    "ConnectionString": "localhost:6379"
+    "ConnectionString": "basketdb:6379"
   },
   "RabbitMQSettings": {
-    "Host": "localhost"
+    "Host": "rabbitmq"
   }
 }
