Add Order service with API, DB, validation, and messaging
Integrated Order service into the microservices architecture:
- Added order-db (PostgreSQL) and order-api to docker-compose with health checks and persistent storage.
- Configured reverse proxy routes and clusters for Order in appsettings.json.
- Implemented Order.API with Serilog, MassTransit (RabbitMQ, saga), EF Core migrations, health checks, and Swagger.
- Introduced DTOs and FluentValidation for order creation.
- Improved dependency injection, AutoMapper, and MediatR setup.
- Removed template WeatherForecastController.
- General code cleanup and modernization.

--- a/src/ApiGateway/ApiGateway/appsettings.json
+++ b/src/ApiGateway/ApiGateway/appsettings.json
@@ -30,9 +30,6 @@
 
   "ReverseProxy": {
     "Routes": {
-      // ============================================
-      // IDENTITY SERVICE ROUTES
-      // ============================================
       "identity-route": {
         "ClusterId": "identity-cluster",
         "Match": {
@@ -44,10 +41,6 @@
           }
         ]
       },
-
-      // ============================================
-      // CATALOG SERVICE ROUTES
-      // ============================================
       "catalog-route": {
         "ClusterId": "catalog-cluster",
         "Match": {
@@ -60,10 +53,17 @@
         ],
         "RateLimiterPolicy": "fixed-window"
       },
-
-      // ============================================
-      // HEALTH CHECK ROUTES (Her servis için)
-      // ============================================
+      "order-route": {
+        "ClusterId": "order-cluster",
+        "Match": {
+          "Path": "/order/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/api/{**catch-all}"
+          }
+        ]
+      },
       "identity-health": {
         "ClusterId": "identity-cluster",
         "Match": {
@@ -85,9 +85,19 @@
             "PathPattern": "/health"
           }
         ]
+      },
+      "order-health": {
+        "ClusterId": "order-cluster",
+        "Match": {
+          "Path": "/health/order"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/health"
+          }
+        ]
       }
     },
-
     "Clusters": {
       "identity-cluster": {
         "Destinations": {
@@ -105,11 +115,26 @@
           }
         }
       },
-
       "catalog-cluster": {
         "Destinations": {
           "catalog-destination-1": {
             "Address": "http://catalog-api:80"
+          }
+        },
+        "HealthCheck": {
+          "Active": {
+            "Enabled": true,
+            "Interval": "00:00:30",
+            "Timeout": "00:00:10",
+            "Policy": "ConsecutiveFailures",
+            "Path": "/health"
+          }
+        }
+      },
+      "order-cluster": {
+        "Destinations": {
+          "order-destination-1": {
+            "Address": "http://order-api:80"
           }
         },
         "HealthCheck": {
