--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,20 @@ services:
       - microecommerce-network
     restart: unless-stopped
 
+  order-db:
+    image: postgres:16-alpine
+    container_name: order-db
+    environment:
+      POSTGRES_DB: ${ORDER_DB_NAME}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5436:5432"
+    volumes:
+      - order-db-data:/var/lib/postgresql/data
+    networks:
+      - microecommerce-network
+    restart: unless-stopped
   basketdb:
     image: redis:alpine
     container_name: basketdb
@@ -205,6 +219,29 @@ services:
       - seq
     networks:
       - microecommerce-network
+
+  order-api:
+    image: ${DOCKER_REGISTRY-}order-api
+    container_name: order-api
+    build:
+      context: .
+      dockerfile: src/Services/Order/Order.API/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+      - ASPNETCORE_URLS=http://+:80
+      - ConnectionStrings__OrderConnectionString=Host=order-db;Port=5432;Database=MicroECommerce_OrderDb;Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};
+      - Serilog__WriteTo__1__Args__serverUrl=${SEQ_URL}
+      - RabbitMQ__Host=rabbitmq
+      - RabbitMQ__UserName=${RABBITMQ_USER}
+      - RabbitMQ__Password=${RABBITMQ_PASSWORD}
+    ports:
+      - "${ORDER_API_PORT}:80"
+    depends_on:
+      - order-db
+      - rabbitmq
+      - seq
+    networks:
+      - microecommerce-network
   # --- API GATEWAY ---
   api-gateway:
     image: ${DOCKER_REGISTRY-}api-gateway
@@ -233,5 +270,6 @@ volumes:
   catalog-db-data:
   identity-db-data:
   notification-db-data:
+  order-db-data:
   seq-data:
   basketdb_data:
